--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -46,6 +46,6 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_centerVertical="true"
-            android:src="@drawable/logo"/>
+            android:src="@drawable/logo2"/>
     </RelativeLayout>
 </RelativeLayout>
